--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -155,6 +155,7 @@
          <li role="presentation"><a href="#type1_type2_tab" aria-controls="settings" role="tab" data-toggle="tab">TYPE1-TYPE2</a></li>
          <li role="presentation"><a href="#type1_type3_tab" aria-controls="settings" role="tab" data-toggle="tab">TYPE1-TYPE3</a></li>
          <li role="presentation"><a href="#type2_type3_tab" aria-controls="settings" role="tab" data-toggle="tab">TYPE2-TYPE3</a></li>
+         <li role="presentation"><a href="#all_tab" aria-controls="settings" role="tab" data-toggle="tab">All</a></li>
          </ul>
          
          <!-- PATHWAY Tab panes -->
@@ -292,6 +293,28 @@
       </table>
       <br/><br/>
       </div>
+      
+      <!-- PATH TYPE2 TYPE3 -->
+    <div role="tabpanel" class="tab-pane fade " id="all_tab">
+    
+      <br/> 
+          
+         
+  
+  <h4>Table 11. All</h4>
+      <table id="tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>NHK</th>
+           <th>Type1</th>
+           <th>Type2</th>
+           <th>Type3</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
 
 </div>
 <div style='min-height:500px'></div>
@@ -325,11 +348,16 @@
     </div>
     
     
-    <script src="https://cdn.datatables.net/buttons/1.0.3/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/1.0.3/js/buttons.bootstrap.min.js"></script>
-    <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.flash.min.js"></script>
-    <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.html5.min.js"></script>
-    <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.print.min.js"></script>
+  <script src="https://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/1.10.9/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/buttons/1.0.3/js/dataTables.buttons.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/buttons/1.0.3/js/buttons.bootstrap.min.js" type="text/javascript"></script>
+  <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.flash.min.js" type="text/javascript"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js" type="text/javascript"></script>
+  <script src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js" type="text/javascript"></script>
+  <script src="//cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js" type="text/javascript"></script>
+  <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.html5.min.js" type="text/javascript"></script>
+  <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.print.min.js" type="text/javascript"></script>
     
     <script src="/static/report/loreal/js/tables.js" type="text/javascript"></script>
     <script src="/static/report/loreal/js/scatter.js" type="text/javascript"></script>
