--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -51,7 +51,7 @@
           
           
           <h1>Gene Analysis</h1>
-          
+          <hr/>
           <div>
           
           <!-- GENE Nav tabs -->
@@ -74,7 +74,7 @@
       <br/> 
           
           <!-- GENES NKK -->
-          <div id="genes-nhk" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+          <div id="genes-nhk" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
   <h4>Table 1. L'Oreal_preprocessed_NHK</h4>
@@ -93,7 +93,7 @@
       
       <div role="tabpanel" class="tab-pane fade " id="type1_tab">
       <!-- GENES TYPE 1 -->
-      <div id="genes-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+      <div id="genes-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
   <h4>Table 2. L'Oreal_loreal_preprocessed_RhE (Type 1)</h4>
@@ -112,7 +112,7 @@
       
       <div role="tabpanel" class="tab-pane fade " id="type2_tab">
       <!-- GENES TYPE 2 -->
-      <div id="genes-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+      <div id="genes-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
   <h4>Table 3. L'Oreal_loreal_preprocessed_RhE (Type 2)</h4>
@@ -131,7 +131,7 @@
        
        <div role="tabpanel" class="tab-pane fade " id="type3_tab">
        <!-- GENES TYPE 3 -->
-      <div id="genes-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+      <div id="genes-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
   <h4>Table 4. L'Oreal_loreal_preprocessed_RhE (Type 3)</h4>
@@ -150,8 +150,10 @@
      
   </div> <!--  end of tabs GENE -->
 
-  
+ <hr/> 
 <h1>Pathway Analysis</h1>
+<hr/>
+<h2>Signaling Pathways</h2>
 
  <!-- PAthway Nav tabs -->
          <ul class="nav nav-tabs" role="tablist">
@@ -172,7 +174,7 @@
           
          
   
-  <h4>Table 11. All</h4>
+  <h4>Table 5. All</h4>
       <table id="tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -193,10 +195,10 @@
       <br/> 
           
           
-          <div id="path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+          <div id="path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 5. NHK vs Type1</h4>
+  <h4>Table 6. NHK vs Type1</h4>
       <table id="tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -216,10 +218,10 @@
       <br/> 
           
           
-          <div id="path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+          <div id="path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 6. NHK vs Type2</h4>
+  <h4>Table 7. NHK vs Type2</h4>
       <table id="tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -238,10 +240,10 @@
       <br/> 
           
           
-          <div id="path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+          <div id="path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 7. NHK vs Type3</h4>
+  <h4>Table 8. NHK vs Type3</h4>
       <table id="tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -260,10 +262,10 @@
       <br/> 
           
           
-          <div id="path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+          <div id="path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 8. Type1 vs Type2</h4>
+  <h4>Table 9. Type1 vs Type2</h4>
       <table id="tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -282,10 +284,10 @@
       <br/> 
           
           
-          <div id="path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+          <div id="path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 9. Type1 vs Type3</h4>
+  <h4>Table 10. Type1 vs Type3</h4>
       <table id="tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -305,10 +307,10 @@
       <br/> 
           
           
-          <div id="path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto"></div>
+          <div id="path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <br/><br/>
   
-  <h4>Table 10. Type2 vs Type3</h4>
+  <h4>Table 11. Type2 vs Type3</h4>
       <table id="tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -324,6 +326,184 @@
       
 
 </div></div>
+
+<hr/>
+<!-- ---------------------------- METABOLIC------------------------ -->
+<h2>Metabolic Pathways</h2>
+<hr/>
+ <!-- Meabolic PAthway Nav tabs -->
+         <ul class="nav nav-tabs" role="tablist">
+         <li role="presentation" class="active"><a href="#meta_all_tab" aria-controls="settings" role="tab" data-toggle="tab">ALL</a></li>
+         <li role="presentation" ><a href="#meta_nhk_type1_tab" aria-controls="home" role="tab" data-toggle="tab">NHK-TYPE1</a></li>
+         <li role="presentation"><a href="#meta_nhk_type2_tab" aria-controls="profile" role="tab" data-toggle="tab">NHK-TYPE2</a></li>
+         <li role="presentation"><a href="#meta_nhk_type3_tab" aria-controls="messages" role="tab" data-toggle="tab">NHK-TYPE3</a></li>
+         <li role="presentation"><a href="#meta_type1_type2_tab" aria-controls="settings" role="tab" data-toggle="tab">TYPE1-TYPE2</a></li>
+         <li role="presentation"><a href="#meta_type1_type3_tab" aria-controls="settings" role="tab" data-toggle="tab">TYPE1-TYPE3</a></li>
+         <li role="presentation"><a href="#meta_type2_type3_tab" aria-controls="settings" role="tab" data-toggle="tab">TYPE2-TYPE3</a></li>
+         
+         </ul>
+         
+         <!-- Meabolic PATHWAY Tab panes -->
+  <div class="tab-content">
+  <!-- Meabolic PATH ALL -->
+    <div role="tabpanel" class="tab-pane fade in active" id="meta_all_tab">     <br/> 
+          
+         
+  
+  <h4>Table 12. All</h4>
+      <table id="meta_tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>NHK</th>
+           <th>Type1</th>
+           <th>Type2</th>
+           <th>Type3</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
+  
+    <!-- Meabolic PATH NHK TYPE1 -->
+    <div role="tabpanel" class="tab-pane fade " id="meta_nhk_type1_tab">
+    
+      <br/> 
+          
+          
+          <div id="meta_path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <br/><br/>
+  
+  <h4>Table 13. NHK vs Type1</h4>
+      <table id="meta_tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>NHK</th>
+           <th>Type1</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
+      
+      
+      <!-- PATH NHK TYPE2 -->
+    <div role="tabpanel" class="tab-pane fade " id="meta_nhk_type2_tab">
+    
+      <br/> 
+          
+          
+          <div id="meta_path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <br/><br/>
+  
+  <h4>Table 14. NHK vs Type2</h4>
+      <table id="meta_tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>NHK</th>
+           <th>Type2</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
+      
+      <!-- Meabolic PATH NHK TYPE3 -->
+    <div role="tabpanel" class="tab-pane fade " id="meta_nhk_type3_tab">
+    
+      <br/> 
+          
+          
+          <div id="meta_path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <br/><br/>
+  
+  <h4>Table 15. NHK vs Type3</h4>
+      <table id="meta_tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>NHK</th>
+           <th>Type3</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
+      
+      <!-- Meabolic PATH TYPE1 TYPE2 -->
+    <div role="tabpanel" class="tab-pane fade " id="meta_type1_type2_tab">
+    
+      <br/> 
+          
+          
+          <div id="meta_path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <br/><br/>
+  
+  <h4>Table 16. Type1 vs Type2</h4>
+      <table id="meta_tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>Type1</th>
+           <th>Type2</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
+      
+      <!-- Meabolic PATH TYPE1 TYPE3 -->
+    <div role="tabpanel" class="tab-pane fade " id="meta_type1_type3_tab">
+    
+      <br/> 
+          
+          
+          <div id="meta_path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <br/><br/>
+  
+  <h4>Table 17. Type1 vs Type3</h4>
+      <table id="meta_tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>Type1</th>
+           <th>Type3</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
+      
+      
+      <!--Meabolic  PATH TYPE2 TYPE3 -->
+    <div role="tabpanel" class="tab-pane fade " id="meta_type2_type3_tab">
+    
+      <br/> 
+          
+          
+          <div id="meta_path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <br/><br/>
+  
+  <h4>Table 18. Type2 vs Type3</h4>
+      <table id="meta_tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway Name</th>
+           <th>Type2</th>
+           <th>Type3</th>
+          </tr>
+        </thead>  
+      </table>
+      <br/><br/>
+      </div>
+      
+      
+
+</div></div>
+
+
 <div style='min-height:500px'></div>
             
           </div>
