--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -4,6 +4,7 @@
     <title>Report R11112015 | Insilico Medicine</title>
     <link href="/static/bower_components/bootstrap-stylus/dist/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="//code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="/static/js/oncofinder2.js" type="text/javascript"></script>
     <script src="/static/bower_components/bootstrap-stylus/dist/bootstrap.min.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js" type="text/javascript"></script>
     <script src="//d3js.org/d3.v3.min.js" type="text/javascript"></script>
@@ -196,7 +197,9 @@
           
           
           <div id="path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <hr/>
+  
+  <div id="venn_path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
   <h4>Table 6. NHK vs Type1</h4>
       <table id="tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -219,7 +222,8 @@
           
           
           <div id="path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <hr/>
+  <div id="venn_path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
   <h4>Table 7. NHK vs Type2</h4>
       <table id="tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -241,7 +245,9 @@
           
           
           <div id="path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <hr/>
+  <div id="venn_path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
+  
   
   <h4>Table 8. NHK vs Type3</h4>
       <table id="tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -263,7 +269,9 @@
           
           
           <div id="path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <hr/>
+  <div id="venn_path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
+  
   
   <h4>Table 9. Type1 vs Type2</h4>
       <table id="tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -285,7 +293,9 @@
           
           
           <div id="path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <hr/>
+  <div id="venn_path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
+  
   
   <h4>Table 10. Type1 vs Type3</h4>
       <table id="tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -308,7 +318,9 @@
           
           
           <div id="path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <hr/>
+  <div id="venn_path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
+  
   
   <h4>Table 11. Type2 vs Type3</h4>
       <table id="tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -546,9 +558,11 @@
     <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.html5.min.js" type="text/javascript"></script>
     <script src="//cdn.datatables.net/buttons/1.0.3/js/buttons.print.min.js" type="text/javascript"></script>
     
+    <script src="/static/report/loreal/js/venn.js/venn.js" type="text/javascript"></script>
     <script src="/static/report/loreal/js/tables.js" type="text/javascript"></script>
     <script src="/static/report/loreal/js/scatter.js" type="text/javascript"></script>
     <script src="/static/report/loreal/js/3d.js" type="text/javascript"></script>
+    <script src="/static/report/loreal/js/venn-diagram.js" type="text/javascript"></script>
     
     
     
