--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -173,7 +173,7 @@
   <!-- PATH ALL -->
     <div role="tabpanel" class="tab-pane fade in active" id="all_tab">     <br/> 
           
-         
+  <div id="venn_path-all" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>   
   
   <h4>Table 5. All</h4>
       <table id="tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -360,7 +360,7 @@
   <!-- Meabolic PATH ALL -->
     <div role="tabpanel" class="tab-pane fade in active" id="meta_all_tab">     <br/> 
           
-         
+  <div id="venn_meta_all" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>          
   
   <h4>Table 12. All</h4>
       <table id="meta_tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -383,8 +383,9 @@
       <br/> 
           
           
-          <div id="meta_path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+     <div id="meta_path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  
+     <div id="venn_meta_nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>   
   
   <h4>Table 13. NHK vs Type1</h4>
       <table id="meta_tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -406,8 +407,8 @@
       <br/> 
           
           
-          <div id="meta_path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <div id="meta_path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <div id="venn_meta_nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
   <h4>Table 14. NHK vs Type2</h4>
       <table id="meta_tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -428,8 +429,8 @@
       <br/> 
           
           
-          <div id="meta_path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <div id="meta_path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <div id="venn_meta_nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
   <h4>Table 15. NHK vs Type3</h4>
       <table id="meta_tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -450,8 +451,8 @@
       <br/> 
           
           
-          <div id="meta_path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <div id="meta_path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <div id="venn_meta_type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
   <h4>Table 16. Type1 vs Type2</h4>
       <table id="meta_tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -472,8 +473,8 @@
       <br/> 
           
           
-          <div id="meta_path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <div id="meta_path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <div id="venn_meta_type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
   <h4>Table 17. Type1 vs Type3</h4>
       <table id="meta_tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -495,8 +496,8 @@
       <br/> 
           
           
-          <div id="meta_path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <br/><br/>
+  <div id="meta_path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
+  <div id="venn_meta_type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
   <h4>Table 18. Type2 vs Type3</h4>
       <table id="meta_tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
