--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -514,7 +514,15 @@
       
       
 
-</div></div>
+</div>
+<hr/>
+<h1>Public domain screening</h1>
+<hr/>
+<a href='/static/report/loreal/public-domain.jpg' target=' _blank'>
+<img src='/static/report/loreal/public-domain.jpg' style="width:90%"/>
+</a>
+
+</div>
 
 
 <div style='min-height:500px'></div>
