--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -7,7 +7,7 @@
     <script src="/static/js/oncofinder2.js" type="text/javascript"></script>
     <script src="/static/bower_components/bootstrap-stylus/dist/bootstrap.min.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js" type="text/javascript"></script>
-    <script src="//d3js.org/d3.v3.min.js" type="text/javascript"></script>
+    <script src="/static/js/d3.v3.min.js" type="text/javascript"></script>
     <script src="https://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <script src="http://code.highcharts.com/highcharts.js" type="text/javascript"></script>
     <script src="https://code.highcharts.com/highcharts-3d.js"  type="text/javascript"></script>
