--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Report R11112015 | Insilico Medicine</title>
+    <title>Episkin Report | Insilico Medicine</title>
     <link href="/static/bower_components/bootstrap-stylus/dist/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="//code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="/static/js/oncofinder2.js" type="text/javascript"></script>
@@ -27,11 +27,11 @@
          <div>
          <span class='pull-left' style='font-size:11pt; margin:15px;'>
          <img src='/static/images/insilico.png' style="width:40px;"/>
-         Insilico Medicine - Report R11112015</span>
+         Insilico Medicine - Episkin Report</span>
          <span class='pull-right' style='font-size:11pt; margin:15px;'>Access Level: Z-II, <br/>Confidential </span>
          </div><br style="clear:both;"/>
           <div class='text-center'>
-            <h1>L'Oréal Report</h1>
+            <h1>Episkin Report</h1>
           </div>
           
           <div style="margin: 50px 0 0 50px;">
