--- a/oncoFinder2/templates/website/loreal_report.html
+++ b/oncoFinder2/templates/website/loreal_report.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Episkin Report | Insilico Medicine</title>
+    <title>Episkin Academy Report | Insilico Medicine</title>
     <link href="/static/bower_components/bootstrap-stylus/dist/bootstrap.min.css" rel="stylesheet" type="text/css">
     <script src="//code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="/static/js/oncofinder2.js" type="text/javascript"></script>
@@ -27,16 +27,16 @@
          <div>
          <span class='pull-left' style='font-size:11pt; margin:15px;'>
          <img src='/static/images/insilico.png' style="width:40px;"/>
-         Insilico Medicine - Episkin Report</span>
+         Insilico Medicine - Episkin Academy Report</span>
          <span class='pull-right' style='font-size:11pt; margin:15px;'>Access Level: Z-II, <br/>Confidential </span>
          </div><br style="clear:both;"/>
           <div class='text-center'>
-            <h1>Episkin Report</h1>
+            <h1>Using signalling pathway activation analysis to compare engineered and natural human skin</h1>
           </div>
           
           <div style="margin: 50px 0 0 50px;">
             <h4 style='font-weight:bold; font-size:12pt;'>Organization: </h4>
-            <span style="font-size:11pt">L'Oréal</span>
+            <span style="font-size:11pt">Episkin Academy</span>
             <br/><br/>
             <!-- <h4 style='font-weight:bold; font-size:12pt;'>Data Quality Assessment: </h4>-->
             
@@ -172,8 +172,23 @@
   <div class="tab-content">
   <!-- PATH ALL -->
     <div role="tabpanel" class="tab-pane fade in active" id="all_tab">     <br/> 
-          
-  <div id="venn_path-all" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>   
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-all" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-all-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-all-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>        
+    
   
   <h4>Table 5. All</h4>
       <table id="tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -198,9 +213,22 @@
           
           <div id="path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  
-  <div id="venn_path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
-  
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-nhk-type1" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-nhk-type1-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-nhk-type1-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table> 
   <h4>Table 6. NHK vs Type1</h4>
       <table id="tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -217,14 +245,27 @@
       
       <!-- PATH NHK TYPE2 -->
     <div role="tabpanel" class="tab-pane fade " id="nhk_type2_tab">
-    
-      <br/> 
+     
           
           
           <div id="path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  <div id="venn_path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
-  
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-nhk-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-nhk-type2-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-nhk-type2-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   <h4>Table 7. NHK vs Type2</h4>
       <table id="tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -246,8 +287,23 @@
           
           <div id="path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  <div id="venn_path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-nhk-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-nhk-type3-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-nhk-type3-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   
   <h4>Table 8. NHK vs Type3</h4>
       <table id="tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -270,8 +326,23 @@
           
           <div id="path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  <div id="venn_path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-type1-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-type1-type2-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-type1-type2-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   
   <h4>Table 9. Type1 vs Type2</h4>
       <table id="tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -294,8 +365,23 @@
           
           <div id="path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  <div id="venn_path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-type1-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-type1-type3-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-type1-type3-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   
   <h4>Table 10. Type1 vs Type3</h4>
       <table id="tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -319,8 +405,23 @@
           
           <div id="path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   <hr/>
-  <div id="venn_path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_path-type2-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-type2-type3-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_path-type2-type3-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   
   <h4>Table 11. Type2 vs Type3</h4>
       <table id="tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
@@ -360,8 +461,22 @@
   <!-- Meabolic PATH ALL -->
     <div role="tabpanel" class="tab-pane fade in active" id="meta_all_tab">     <br/> 
           
-  <div id="venn_meta_all" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>          
-  
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_meta-all" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-all-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-all-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   <h4>Table 12. All</h4>
       <table id="meta_tbl-all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -385,8 +500,23 @@
           
      <div id="meta_path-nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
   
-     <div id="venn_meta_nhk-type1" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>   
-  
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_meta-nhk-type1" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-nhk-type1-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-nhk-type1-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
+    
   <h4>Table 13. NHK vs Type1</h4>
       <table id="meta_tbl-nhk-type1" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -408,8 +538,24 @@
           
           
   <div id="meta_path-nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <div id="venn_meta_nhk-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_meta-nhk-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-nhk-type2-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-nhk-type2-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
+    
   <h4>Table 14. NHK vs Type2</h4>
       <table id="meta_tbl-nhk-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -430,8 +576,24 @@
           
           
   <div id="meta_path-nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <div id="venn_meta_nhk-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_meta-nhk-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-nhk-type3-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-nhk-type3-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
+    
   <h4>Table 15. NHK vs Type3</h4>
       <table id="meta_tbl-nhk-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -452,8 +614,23 @@
           
           
   <div id="meta_path-type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <div id="venn_meta_type1-type2" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_meta-type1-type2" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-type1-type2-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-type1-type2-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   <h4>Table 16. Type1 vs Type2</h4>
       <table id="meta_tbl-type1-type2" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -474,8 +651,23 @@
           
           
   <div id="meta_path-type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <div id="venn_meta_type1-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
-  
+ 
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_meta-type1-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-type1-type3-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-type1-type3-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   <h4>Table 17. Type1 vs Type3</h4>
       <table id="meta_tbl-type1-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
@@ -497,8 +689,23 @@
           
           
   <div id="meta_path-type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading plot...</div>
-  <div id="venn_meta_type2-type3" style="min-width: 800px; height: 400px; max-width: 800px; margin: 0 auto">Loading diagram...</div>
   
+  <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_meta-type2-type3" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div>
+       Up and down regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-type2-type3-up" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Up regulated pathways
+       </td>
+       <td>
+       <div id="venn_meta-type2-type3-down" style="min-width: 300px; height: 300px; max-width: 300px; margin: 0 auto">Loading diagram...</div> 
+       Down regulated pathways
+       </td>
+      </tr>
+    </table>
   <h4>Table 18. Type2 vs Type3</h4>
       <table id="meta_tbl-type2-type3" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
